MDL-37049 Roles, Themes: Course>Other users>Add users - fix various alignments in popup dialog, when in RTL (theme/standard)

--- a/enrol/yui/otherusersmanager/assets/skins/sam/otherusersmanager.css
+++ b/enrol/yui/otherusersmanager/assets/skins/sam/otherusersmanager.css
@@ -36,18 +36,22 @@ Structure of the other user role assignment panel
 .other-user-manager-panel .oump-header {background-color:#eee;padding:1px;}
 .other-user-manager-panel .oump-header h2 {margin:3px 1em 0.5em 1em;font-size:1em;}
 .other-user-manager-panel .oump-header .oump-panel-close {width:25px;height:15px;position:absolute;top:2px;right:1em;cursor:pointer;background:url("sprite.png") no-repeat scroll 0 0 transparent;}
-
+.dir-rtl .other-user-manager-panel .oump-header .oump-panel-close {left: 1em;right: auto;}
 .other-user-manager-panel .oump-content {text-align:center;position:relative;width:100%;border-top:1px solid #999;border-bottom:1px solid #999;}
 .other-user-manager-panel .oump-ajax-content {height:375px;overflow:auto;}
 .other-user-manager-panel .oump-search-results .oump-total-users {background-color:#eee;padding:5px;border-bottom:1px solid #BBB;font-size:7pt;font-weight: bold;}
 
 .other-user-manager-panel .oump-search-results .oump-user {width:100%;text-align:left;font-size:9pt;background-color:#ddd;border-bottom:1px solid #aaa;}
+.dir-rtl .other-user-manager-panel .oump-search-results .oump-user {text-align: right;}
 .other-user-manager-panel .oump-search-results .oump-user .oump-user-details {background-color:#fff;margin-left:25px;border-left:1px solid #bbb;}
+.dir-rtl .other-user-manager-panel .oump-search-results .oump-user .oump-user-details {margin-right: 25px; margin-left: auto;}
 .other-user-manager-panel .oump-search-results .oump-user.odd .oump-user-details {background-color:#f9f9f9;}
 .other-user-manager-panel .oump-search-results .oump-user .count {width:20px;font-size:7pt;line-height:100%;text-align:right;float:left;padding:5px 5px 2px 2px}
+.dir-rtl .other-user-manager-panel .oump-search-results .oump-user .count {float:right;}
 .other-user-manager-panel .oump-search-results .oump-user .oump-user-details .oump-user-picture {display:inline-block;margin:3px;}
 .other-user-manager-panel .oump-search-results .oump-user .oump-user-details .oump-user-specifics {width:250px;display:inline-block;margin:3px;vertical-align:top;}
 .other-user-manager-panel .oump-search-results .oump-user .oump-user-details .oump-role-options {font-size:8pt;margin-top:2px;text-align:right;margin-right:2px;}
+.dir-rtl .other-user-manager-panel .oump-search-results .oump-user .oump-user-details .oump-role-options {text-align: left;}
 .other-user-manager-panel .oump-search-results .oump-user .oump-user-details .oump-role-options .oump-assignable-role {display:inline-block;margin:0;padding:3px 4px;cursor:pointer;}
 .other-user-manager-panel .oump-search-results .oump-user.assignment-in-progress .oump-assignable-role {color:#666;cursor:default;}
 .other-user-manager-panel .oump-search-results .oump-more-results {background-color:#eee;padding:5px;cursor:pointer;}
